--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,6 @@ stages:
   - name: compile
   - name: test
   - name: E2E
-    if: type = cron
   - name: cleanup
 
 jdk: "openjdk8"
@@ -74,47 +73,14 @@ jobs:
   include:
     # main profile
     - if: type in (pull_request, push)
-      stage: compile
-      script: ./tools/travis_controller.sh compile
-      env: PROFILE="-Dhadoop.version=2.8.3 -Pinclude-kinesis -Dinclude_hadoop_aws -Dscala-2.11"
-      name: compile
-    - if: type in (pull_request, push)
-      stage: test
-      script: ./tools/travis_controller.sh core
-      env: PROFILE="-Dhadoop.version=2.8.3 -Pinclude-kinesis -Dinclude_hadoop_aws -Dscala-2.11"
-      name: core
-    - if: type in (pull_request, push)
-      script: ./tools/travis_controller.sh python
-      env: PROFILE="-Dhadoop.version=2.8.3 -Pinclude-kinesis -Dinclude_hadoop_aws -Dscala-2.11"
-      name: python
-    - if: type in (pull_request, push)
-      script: ./tools/travis_controller.sh libraries
-      env: PROFILE="-Dhadoop.version=2.8.3 -Pinclude-kinesis -Dinclude_hadoop_aws -Dscala-2.11"
-      name: libraries
-    - if: type in (pull_request, push)
-      script: ./tools/travis_controller.sh blink_planner
-      env: PROFILE="-Dhadoop.version=2.8.3 -Pinclude-kinesis -Dinclude_hadoop_aws -Dscala-2.11"
-      name: blink_planner
-    - if: type in (pull_request, push)
-      script: ./tools/travis_controller.sh connectors
-      env: PROFILE="-Dhadoop.version=2.8.3 -Pinclude-kinesis -Dinclude_hadoop_aws -Dscala-2.11"
-      name: connectors
-    - if: type in (pull_request, push)
-      script: ./tools/travis_controller.sh kafka/gelly
-      env: PROFILE="-Dhadoop.version=2.8.3 -Pinclude-kinesis -Dinclude_hadoop_aws -Dscala-2.11"
-      name: kafka/gelly
-    - if: type in (pull_request, push)
-      script: ./tools/travis_controller.sh tests
-      env: PROFILE="-Dhadoop.version=2.8.3 -Pinclude-kinesis -Dinclude_hadoop_aws -Dscala-2.11"
-      name: tests
-    - if: type in (pull_request, push)
-      script: ./tools/travis_controller.sh misc
-      env: PROFILE="-Dhadoop.version=2.8.3 -Pinclude-kinesis -Dinclude_hadoop_aws -Dscala-2.11"
-      name: misc
+      stage: E2E
+      env: PROFILE="-Dinclude-hadoop -Dhadoop.version=2.8.3 -Dinclude-kinesis -Dscala-2.11"
+      script: ./tools/travis/nightly.sh split_heavy.sh
+      name: heavy - hadoop 2.8
     - if: type in (pull_request, push)
       stage: cleanup
       script: ./tools/travis_controller.sh cleanup
-      env: PROFILE="-Dhadoop.version=2.8.3 -Pinclude-kinesis -Dinclude_hadoop_aws -Dscala-2.11"
+      env: PROFILE="-Dhadoop.version=2.8.3 -Pinclude-kinesis -Dscala-2.11"
       name: cleanup
     # hadoop 2.4.1 profile
     - if: type = cron
