--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@ under the License.
 		invalid here -->
 		<scala.version>2.11.12</scala.version>
 		<scala.binary.version>2.11</scala.binary.version>
-		<chill.version>0.7.6</chill.version>
+		<chill.version>0.8.5</chill.version>
 		<zookeeper.version>3.4.10</zookeeper.version>
 		<curator.version>2.12.0</curator.version>
 		<jackson.version>2.9.8</jackson.version>
@@ -471,9 +471,9 @@ under the License.
 
 			<!-- kryo used in different versions by Flink an chill -->
 			<dependency>
-				<groupId>com.esotericsoftware.kryo</groupId>
+				<groupId>com.esotericsoftware</groupId>
 				<artifactId>kryo</artifactId>
-				<version>2.24.0</version>
+				<version>3.0.3</version>
 			</dependency>
 
 			<dependency>
