--- a/flink-runtime/pom.xml
+++ b/flink-runtime/pom.xml
@@ -102,7 +102,7 @@ under the License.
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
@@ -252,6 +252,13 @@ under the License.
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-shaded-curator</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+
+		<!-- Lz4 compression library -->
+		<dependency>
+			<groupId>org.lz4</groupId>
+			<artifactId>lz4-java</artifactId>
+			<version>1.5.0</version>
 		</dependency>
 
 		<!-- test dependencies -->
@@ -582,7 +589,7 @@ under the License.
 										 	copied into this modules's NOTICE file. -->
 										<exclude>META-INF/NOTICE.txt</exclude>
 									</excludes>
-								</filter>	
+								</filter>
 								<filter>
 									<artifact>*</artifact>
 									<excludes>
